--- a/DOM.Drills/styles.css
+++ b/DOM.Drills/styles.css
@@ -1,3 +1,8 @@
+body{
+    background-color: lightgrey;
+}
+
+
 h1{
     color: aqua
 
@@ -15,7 +20,7 @@ h3{
 
 h4{
     color: darkgoldenrod;
-    
+
 }
 
 h5{
@@ -27,4 +32,5 @@ h6{
     color: forestgreen;
 
 }
+
 
